Changes in 5.4.3
================
* NEW "set pm3d border retrace" will use quadrangle color for the border
* NEW "nogrid" flag for plots to opt out of dgrid3d processing
* NEW option "above|below y=<val>" for "plot with fillsteps"
* FIX contours were incorrectly allocated space in the key even if "notitle"
* FIX evaluation of unary minus in front of ternary operator Bug #2468
* FIX arm and s390 require "signed char" Bugs #2467 #2450
* FIX range errors if "smooth csplines" applied with x-axis reversed Bug #2465
* FIX handle various corner cases found by fuzzing
* FIX textcolor should accept "linetype N"  Bug #2459
* FIX Windows:  handling of Window messages for piped input Bugs #2204 #2412
* FIX aquaterm: auto-configuration use of Frameworks  Bug #2419
* FIX qt:       pm3d quadrangle borders for transparent surfaces
* FIX png/gif:  gdlib auto-configuration issues
* FIX dumb:     limit enhanced text markup to single-line vertical displacement

Changes in 5.4.2
================
* NEW in "using" context, $# means "number of columns in current data line"
* NEW define on program entry:   I = sqrt(-1) = {0.,1.}
* NEW support input data that uses epidemiological date-week formats
* NEW optional fillcolor for "set key opaque"
* NEW provide and document use of a plugin to provide uigamma function
* CHANGE much improved domain and precision for igamma function
* CHANGE generate only one key entry per multi-dataset input file Bug #2380
* CHANGE (Windows): attempt to convert unicode on command line to UTF-8
* CHANGE clip `with image` to plot boundary in 2D plots
* CHANGE In gprintf format "%c", add no space for a null prefix Bug #2266
* CHANGE Make auto-placement of left border less sensitive to plot size Bug #2415
* FIX time formats %U %W Bug #2390
* FIX cairo terminals: Do not lose font info during multi-line enhanced text
* FIX left-justification of titles in splot with user-specified key position