@@ -1687,6 +1687,8 @@ save_histogram_opts (FILE *fp)
     if (histogram_opts.title.font)
 	fprintf(fp, " font \"%s\" ", histogram_opts.title.font);
     save_position(fp, &histogram_opts.title.offset, 2, TRUE);
+    if (!histogram_opts.keyentry)
+	fprintf(fp, " nokeyseparators");
     fprintf(fp, "\n");
 }
 
